# argus

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  mediamtx.yml  pyproject.toml  requirements.txt
backend/: README.md  live_view.py
backend/yolo_classifier/: .dockerignore  .env.example  Dockerfile  inference_config.yaml  main.py  requirements.txt
backend/yolo_classifier/app/: config.py  database.py  main.py  models.py  schemas.py  utils.py
backend/yolo_classifier/intrusion_monitor/: .gitignore  README.md  intrusion_nlu_config.json  zones_config.json
backend/yolo_classifier/scripts/: migrate_sqlite_to_postgres.py
backend/yolo_classifier/tests/: conftest.py  test_01_jwt_secret_validation.py  test_02_auth_enforcement.py  test_03_stream_url_ssrf.py  test_04_websocket_auth.py  test_05_inference_backpressure.py  test_06_stream_reconnection.py  test_07_database_init.py  test_08_tenant_isolation.py  test_inference.py  test_metrics_endpoint.py
chatbot/: .dockerignore  .env.example  Dockerfile  chatbot_service.py  docker-compose.yml  requirements.txt  run_ingestion.py
chatbot/project/: __init__.py  main.py  settings.py
chatbot/scripts/: backup-index.sh  ec2-setup.sh
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
nginx/: nginx-ssl.conf  nginx.conf
plans/: argus-threat-model.md  aws-deployment-security-checklist.md  deployment-roadmap.md  deployment-session-log.md
scripts/: generate-secrets.sh  relay-cam1.ps1  setup-tls.sh
(+77 files in other folders)
