[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intruder-detection-system"
version = "0.1.0"
description = "Real-time intrusion detection backend services."
readme = "backend/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Intruder Detection System Contributors" }
]
dependencies = [
  "fastapi==0.109.2",
  "uvicorn[standard]==0.27.1",
  "sqlalchemy==2.0.27",
  "aiosqlite==0.19.0",
  "asyncpg==0.29.0",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.1",
  "pydantic==2.6.1",
  "pydantic-settings==2.1.0",
  "python-multipart==0.0.9",
  "websockets==12.0",
  "httpx==0.26.0",
  "openvino==2024.6.0",
  "pyyaml==6.0.2",
  "nncf==2.14.1",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "deep-sort-realtime==1.3.2",
  "opencv-python-headless==4.9.0.80",
  "numpy==1.26.4",
  "scipy==1.12.0",
  "Pillow==10.2.0",
  "python-dotenv==1.0.1",
  "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ids-api = "main:main"
ids-roi-monitor = "app.cli.roi_monitor:main"

[tool.setuptools]
package-dir = { "" = "backend/yolo_classifier" }
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["backend/yolo_classifier"]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["backend/yolo_classifier"]
testpaths = ["backend/yolo_classifier/tests"]
